objects/Project_Products__c.object
<CustomObject>
    <fields>
        <fullName>APM_Email__c</fullName>
        <description>auto fills with email address for APM on related site used mostly for alerts - updated via WF/PB</description>
        <inlineHelpText>auto fills with email address for APM on related site used mostly for alerts</inlineHelpText>
        <label>APM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Buss_Rating__c</fullName>
        <inlineHelpText>Maximum ampacity Rating of the gear</inlineHelpText>
        <label>Buss Rating</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <inlineHelpText>Based on Inverter &amp; Utility. See EE or refer to Configuration Guidance Table</inlineHelpText>
        <label>Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>380 Delta LV / Gwye MV</fullName>
                </value>
                <value>
                    <fullName>380V Ungrounded Wye LV / Delta MV</fullName>
                </value>
                <value>
                    <fullName>385V Delta LV / Gwye MV</fullName>
                </value>
                <value>
                    <fullName>385V Ungrounded Wye LV / Delta MV</fullName>
                </value>
                <value>
                    <fullName>480 GWye LV / Gwye MV</fullName>
                </value>
                <value>
                    <fullName>800V Gwye LV / Gwye MV</fullName>
                </value>
                <value>
                    <fullName>Delta LV / Gwye MV</fullName>
                </value>
                <value>
                    <fullName>Ungrounded Wye LV / Delta MV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>description of the project product, used to specify equipment if product is not listed in Salesforce</description>
        <inlineHelpText>description of the project product, used to specify equipment if product is not listed in Salesforce</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_SDE__c</fullName>
        <description>pulls name of Development SDE from related Site used mostly for filters in list views and reporting</description>
        <formula>Site__r.Development_SDE__r.FirstName +&quot; &quot;+ Site__r.Development_SDE__r.LastName</formula>
        <inlineHelpText>pulls name of Development SDE from related Site</inlineHelpText>
        <label>Development SDE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grounding_Transformer__c</fullName>
        <inlineHelpText>Is GND XFMR required? Yes of No?</inlineHelpText>
        <label>Grounding Transformer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Type__c</fullName>
        <formula>Project__r.Site__c</formula>
        <inlineHelpText>pulls values of Site Install Type from related Project</inlineHelpText>
        <label>Install Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_Voltage_Primary__c</fullName>
        <inlineHelpText>From SLD</inlineHelpText>
        <label>Interconnection Voltage (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4.16</fullName>
                </value>
                <value>
                    <fullName>12.4</fullName>
                </value>
                <value>
                    <fullName>12.47</fullName>
                </value>
                <value>
                    <fullName>13.2</fullName>
                </value>
                <value>
                    <fullName>13.8</fullName>
                </value>
                <value>
                    <fullName>22.8</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>69</fullName>
                </value>
                <value>
                    <fullName>133</fullName>
                </value>
                <value>
                    <fullName>233</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>208</fullName>
                </value>
                <value>
                    <fullName>480</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_CE_Email__c</fullName>
        <label>Internal CE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_EE_Email__c</fullName>
        <description>auto fills with email address for internal electrical engineer on related site used mostly for alerts, updated via PB/WF</description>
        <inlineHelpText>auto fills with email address for internal electrical engineer on related site used mostly for alerts</inlineHelpText>
        <label>Internal EE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Internal_SE_Email__c</fullName>
        <description>auto fills with email address for internal structural engineer on related site used mostly for alerts, updated via PB/WF</description>
        <inlineHelpText>auto fills with email address for internal structural engineer on related site used mostly for alerts</inlineHelpText>
        <label>Internal SE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inverter_Status__c</fullName>
        <formula>TEXT(Site__r.Inverter_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <formula>Product__r.Manufacturer_Account__r.Name</formula>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <inlineHelpText>Product Code from manufacturer</inlineHelpText>
        <label>Model #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Status__c</fullName>
        <description>Module Status from the Product Information on the Site</description>
        <formula>TEXT(Site__r.Modules_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mounting_Configuration__c</fullName>
        <inlineHelpText>Pad or Pole Mounted</inlineHelpText>
        <label>Mounting Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pad</fullName>
                </value>
                <value>
                    <fullName>Pole</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Coils__c</fullName>
        <inlineHelpText>Generally, 2 winding, unless using 2 SMA Centrals on one transformer; then, 3 winding</inlineHelpText>
        <label>Number of Windings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Supplied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check-box identifies if material is &quot;Owner Supplied&quot;.</inlineHelpText>
        <label>Owner Supplied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PE_Email__c</fullName>
        <description>auto fills with email address for related PE on related Site used mostly for alerts, updated via WF/PB</description>
        <inlineHelpText>auto fills with email address for related PE on related Site used mostly for alerts</inlineHelpText>
        <label>PE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_NameDescription__c</fullName>
        <formula>Product__r.Name&amp;&quot;- &quot; &amp;TRIM(LEFT( Description__c , 20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product NameDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Notes__c</fullName>
        <inlineHelpText>Explain reason(s) for deviation from standards.</inlineHelpText>
        <label>Product Notes</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Product2.Status__c</field>
                <operation>equals</operation>
                <value>1- Standard, 2- CC Approved for Sale, 3- Project Specific Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Project Products</relationshipLabel>
        <relationshipName>Project_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <formula>Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls the Project Id. Used in reporting</inlineHelpText>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager_Email__c</fullName>
        <description>pulls email of the project manager on related Site, used for alerts</description>
        <inlineHelpText>pulls email of the project manager on related Site, used for alerts</inlineHelpText>
        <label>PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Project Products</relationshipLabel>
        <relationshipName>Project_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_and_Site_Match__c</fullName>
        <formula>IF( Project__r.Id = Site__r.Project__r.Id , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project and Site Match?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Enter the quantity of the product on this project</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <inlineHelpText>Rolls up the related quote status</inlineHelpText>
        <label>Quote Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Status_formula__c</fullName>
        <description>Reporting workaround. Quote Status is rolled up from ROllup Helper by display &quot;null&quot; if there is no quote. This field was created to avoid seeing &quot;null&quot; on reports</description>
        <formula>IF( Quote_Status__c = &quot;null&quot;, null ,  Quote_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Quote Status from the related Quote</inlineHelpText>
        <label>Quote Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>brings over branch from picklist on related project</description>
        <formula>TEXT(Project__r.Branch__c)</formula>
        <inlineHelpText>displays branch from the related project</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDE_Email__c</fullName>
        <description>populates email address for assigned SDE on related Site, used mostly for alerts, updated via WF/PB</description>
        <inlineHelpText>populates email address for assigned SDE on related Site, used mostly for alerts</inlineHelpText>
        <label>SDE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Voltage__c</fullName>
        <inlineHelpText>Inverter AC output voltage</inlineHelpText>
        <label>Secondary Voltage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Design_Stage__c</fullName>
        <description>brings over Design Stage from related Site - used mostly for filtering list view and reporting filters</description>
        <formula>TEXT(Site__r.Design_Stage__c)</formula>
        <inlineHelpText>brings over Design Stage from related Site</inlineHelpText>
        <label>Site Design Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the site the product is related to</inlineHelpText>
        <label>Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Site__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Project Products</relationshipLabel>
        <relationshipName>Project_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Watts_STC__c</fullName>
        <formula>IF(Product__r.RecordType.DeveloperName = &quot;SolarModule&quot;, Product__r.Watts_STC__c * Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Watts (STC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <description>brings over text value of Utility Company field on project</description>
        <formula>Project__r.Utility_CompanyF__c</formula>
        <inlineHelpText>brings over Utility company from Project</inlineHelpText>
        <label>Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warranty Registration</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Project Products</relationshipLabel>
        <relationshipName>Project_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Term__c</fullName>
        <formula>Product__r.Materials_Warranty_Yrs__c</formula>
        <label>Warranty Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Watts_STC__c</fullName>
        <inlineHelpText>Pulled in by trigger from the Watts (STC) field of the related Product record.</inlineHelpText>
        <label>Watts (STC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kVA__c</fullName>
        <inlineHelpText>AC rating of the transformer</inlineHelpText>
        <label>kVA</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Site__c</columns>
        <columns>Product__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SDE_s</fullName>
        <columns>Project__c</columns>
        <columns>Site__c</columns>
        <columns>Development_SDE__c</columns>
        <columns>Site_Design_Stage__c</columns>
        <columns>NAME</columns>
        <columns>Quantity__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Total_Watts_STC__c</columns>
        <columns>kVA__c</columns>
        <columns>Number_of_Coils__c</columns>
        <columns>Mounting_Configuration__c</columns>
        <columns>Buss_Rating__c</columns>
        <columns>Grounding_Transformer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Development_SDE__c</field>
            <operation>equals</operation>
            <value>Tim Lee,Katlyn Lawver,John Lagasse</value>
        </filters>
        <filters>
            <field>Site_Design_Stage__c</field>
            <operation>equals</operation>
            <value>Site Use Permit Set,50% Set</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Products__c.DAS,Project_Products__c.Inverter,Project_Products__c.Modules,Project_Products__c.Other,Project_Products__c.Racking,Project_Products__c.Transformer,Project_Products__c.Switchboards,Project_Products__c.Switchgear</value>
        </filters>
        <label>All SDE&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SDE_s1</fullName>
        <columns>Project__c</columns>
        <columns>Product__c</columns>
        <columns>Site_Design_Stage__c</columns>
        <columns>NAME</columns>
        <columns>Quantity__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Total_Watts_STC__c</columns>
        <columns>kVA__c</columns>
        <columns>Number_of_Coils__c</columns>
        <columns>Mounting_Configuration__c</columns>
        <columns>Buss_Rating__c</columns>
        <columns>Grounding_Transformer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Development_SDE__c</field>
            <operation>equals</operation>
            <value>Tim Lee,Katlyn Lawver,John Lagasse</value>
        </filters>
        <filters>
            <field>Site_Design_Stage__c</field>
            <operation>equals</operation>
            <value>,Site Use Permit Set,50% Set,CD IFR,CD IFC</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Products__c.DAS,Project_Products__c.Inverter,Project_Products__c.Modules,Project_Products__c.Other,Project_Products__c.Racking,Project_Products__c.Transformer,Project_Products__c.Switchboards,Project_Products__c.Switchgear</value>
        </filters>
        <label>Products in Projects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inverters</fullName>
        <columns>Project__c</columns>
        <columns>Site__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Install_Type__c</columns>
        <columns>Region__c</columns>
        <columns>Total_Watts_STC__c</columns>
        <columns>Utility__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Products__c.Inverter</value>
        </filters>
        <label>Inverters</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Modules</fullName>
        <columns>Project__c</columns>
        <columns>Site__c</columns>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Site_Design_Stage__c</columns>
        <columns>Total_Watts_STC__c</columns>
        <columns>Install_Type__c</columns>
        <columns>Region__c</columns>
        <columns>Utility__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Products__c.Modules</value>
        </filters>
        <label>Modules</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Transformers</fullName>
        <columns>Project__c</columns>
        <columns>Site__c</columns>
        <columns>NAME</columns>
        <columns>Site_Design_Stage__c</columns>
        <columns>Region__c</columns>
        <columns>Utility__c</columns>
        <columns>Install_Type__c</columns>
        <columns>Total_Watts_STC__c</columns>
        <columns>Interconnection_Voltage_Primary__c</columns>
        <columns>kVA__c</columns>
        <columns>Number_of_Coils__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project_Products__c.Transformer</value>
        </filters>
        <label>Transformers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PP-{000000000}</displayFormat>
        <label>Project Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Products</pluralLabel>
    <recordTypes>
        <fullName>DAS</fullName>
        <active>true</active>
        <description>Data Acquistion System (DAS) component/supplier</description>
        <label>DAS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Energy_Storage</fullName>
        <active>true</active>
        <description>Energy Storage device and/or complimentary products</description>
        <label>Energy Storage</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Electric</fullName>
        <active>true</active>
        <description>General Electrical equipment not outlined by another Record Type (e.g. fuses, Mini-Power centers, etc.)</description>
        <label>General Electric</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inverter</fullName>
        <active>true</active>
        <description>Major Component: Inverters for the Project</description>
        <label>Inverter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Metering_Equipment</fullName>
        <active>true</active>
        <description>Metering Equipment components</description>
        <label>Metering Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Modules</fullName>
        <active>true</active>
        <description>Major Component: Solar Modules</description>
        <label>Modules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Non-electrical equipment use in construction of the system (e.g. lugs, placards, etc.)</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Racking</fullName>
        <active>true</active>
        <description>Major Component: Racking (structural support system)</description>
        <label>Racking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Switchboards</fullName>
        <active>true</active>
        <description>Switchboards and/or Panelboards</description>
        <label>Switchboards/Panelboard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Switchgear</fullName>
        <active>true</active>
        <description>Switchgear for the Project (i.e. AC/DC disconnect, recloser, GOAB, safety switch)</description>
        <label>Switchgear/Recloser</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transformer</fullName>
        <active>true</active>
        <description>Low/Medium Voltage, Current, Potential, Step-up/down, Distributed, Power Transformers</description>
        <label>Transformer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Locked_Editing_Qty_Product_East</fullName>
        <active>true</active>
        <description>only certain users/profiles can edit the Qty and Product</description>
        <errorConditionFormula>AND(
NOT (ISNEW()),
ISPICKVAL( Project__r.Branch__c, &quot;Boston&quot;),
OR(
ISCHANGED( Quantity__c ),ISCHANGED( Product__c )),
AND(
$Profile.Name &lt;&gt; &quot;Procurement&quot;, 
$Profile.Name &lt;&gt; &quot;Sys Admin w/o HR&quot;,
$User.Id &lt;&gt; &quot;0053400000BWyIh&quot;,
NOT(CONTAINS($Profile.Name, &quot;Engineering&quot;)))
)</errorConditionFormula>
        <errorMessage>Only Procurement and members of the Engineering team can modify Quantity or Product .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Locked_Editing_Qty_Product_Not_East</fullName>
        <active>true</active>
        <description>only certain users/profiles can edit the Qty and Product</description>
        <errorConditionFormula>AND(
NOT (ISNEW()),
NOT(ISPICKVAL( Project__r.Branch__c, &quot;Boston&quot;)),
OR(
ISCHANGED( Quantity__c ),ISCHANGED( Product__c )),
AND(
$Profile.Name &lt;&gt; &quot;Procurement&quot;, 
$Profile.Name &lt;&gt; &quot;Sys Admin w/o HR&quot;,
$Profile.Name &lt;&gt; &quot;Borrego - PM&quot;,
$User.Id &lt;&gt; &quot;0053400000BWyIh&quot;,
NOT(
CONTAINS(
$Profile.Name, &quot;Engineering&quot;)))
)</errorConditionFormula>
        <errorMessage>Only Procurement, PM&apos;s or members of the Engineering team can modify Quantity or Product .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductsLocked</fullName>
        <active>false</active>
        <description>Don&apos;t allow any change to a Project Product record if the Overall Project Status of the Project is not equal to &quot;Pre-Contract&quot; (however some profiles can make changes).</description>
        <errorConditionFormula>AND(
 $Profile.Name &lt;&gt; &quot;Procurement&quot;,
 $Profile.Name &lt;&gt; &quot;President&quot;,
 $Profile.Name &lt;&gt; &quot;Sys Admin w/o HR&quot;,
 $UserRole.Name &lt;&gt; &quot;Regional Lead- System Designer&quot;,
 NOT(ISPICKVAL(Project__r.Overall_Project_Status__c, &quot;Pre-Contract&quot;))
)</errorConditionFormula>
        <errorMessage>Project Products can only be created or changed if the Overall Project Status of the Project is &quot;Pre-Contract&quot;.To edit a product after contract signed, please enter a Change Order.</errorMessage>
    </validationRules>
</CustomObject>